# uni_projects

./: README.md
BlueBerryToken/: README.md
PPKWU/lab1/: Makefile
PPKWU/lab1/src/: server.py
PPKWU/lab5/: test.json
PPKWU/lab6/: requirements.txt
PUM/: .gitignore
PUM/lab1/: .gitignore  index.html
PUM/lab1b/: index.html
PUM/lab2/: index.html
PUM/lab3/: index.html
PUM/lab4/: index.html
PUM/lab5/: index.html
PUM/lab6/: index.html
PUM/lab7/: index.html
PUM/lab8/: index.html
PUM/lab8_1/: index.html
TUL/: README.md
TUL/backend/: Makefile  main.py  requirements.txt
TUL/frontend/: package-lock.json  package.json
ZPI2021_IO1_Banana_eaters/: JSONHandler.py  Makefile  README.md  requirements.txt
ZPI2021_IO1_Banana_eaters/src/: app.py  config.json  functions.py  prep_test_json.py
ZPI2021_IO1_Banana_eaters/tests/: 2022-12-20-to-2023-02-07.json  test.py
cpp-opencl-training/: .gitignore  CMakeLists.txt  CMakePresets.json  commands_used.txt  test.py
cpp-opencl-training/src/: functions.cl  hello.cpp  main.cpp
niekompetencyjny/: Makefile  README.md
niekompetencyjny/input_data/: curr.json  example.json  new_example.json
niekompetencyjny/src/: Door.py  JsonIO.py  RoomHandler.py  RoomTemplate.py  TemplateValidator.py  genAlgorithm.py  learn.py  print.py
niekompetencyjny/test/: __init__.py  test_Figures.py  test_RoomHandler.py  test_RoomTemplate.py  test_chromosome.py
openmp_training/exercise_1b/: hello_world.cc
psi_genetic_algs/: genome_binary.py  genome_interface.py  population.py  speciman.py  zad1.py  zad2.py  zad3.py  zad4.py
(+65 files in other folders)
